# voxcadNASA

./: .gitignore
voxelyze-frustum/: CMakeCache.txt  CMakeLists.txt  Makefile  case_study_3.vxa  cmake_install.cmake  data.txt  individual.vxa  individual.vxc  lattice.vxa  test  test.cpp  test.vxa  voxelize  voxelyze
voxelyze-frustum/Voxelyze/: VX_FEA.cpp  VX_FEA.h  VX_FRegion.h  VX_Sim.cpp  VX_Sim.h  main.cpp
voxelyze-frustum/Voxelyze/Utils/: OpenGLInclude.h
