cmake_minimum_required(VERSION 2.8)
project( voxelize )
find_package( OpenCV REQUIRED )
find_package(OpenGL REQUIRED)
find_package(GLUT REQUIRED)
add_definitions(-DUSE_OPEN_GL=true)
add_executable( voxelize Voxelyze/main.cpp Voxelyze/Utils/MarchCube.cpp Voxelyze/Utils/Array3D.cpp Voxelyze/Utils/OpenGLInclude.h Voxelyze/Utils/GL_Utils Voxelyze/Utils/XML_Rip.o Voxelyze/VXS_Voxel.cpp Voxelyze/VXS_Bond.cpp Voxelyze/VX_Sim.cpp Voxelyze/VX_SimGA.cpp Voxelyze/VX_Object.cpp Voxelyze/VX_MeshUtil.cpp Voxelyze/VX_FRegion.cpp Voxelyze/VX_FEA.cpp Voxelyze/VX_Environment.cpp Voxelyze/Utils/Mesh.cpp Voxelyze/Utils/tinyxml.cpp Voxelyze/Utils/tinyxmlerror.o Voxelyze/Utils/tinyxmlparser.o)
target_link_libraries( voxelize ${OpenCV_LIBS} ${OPENGL_LIBRARIES} ${GLUT_LIBRARY}) 
